# ziggy

./: .gitignore
binSearch/src/: main.rs
binarySearch/src/: main.zig
go/lockfree/: go.mod  main.go
go/lockfree/backoff/: spin.go
go/lockfree/queue/: queue.go
go/lockfree/stack/: stack.go
rust/algorithms/binary_search/src/: main.rs
rust/algorithms/binary_search/src/search/: binary_search.rs
rust/binary_search/: Cargo.toml
rust/binary_search/src/: main.rs
rust/cli/game_of_life/: Cargo.toml
rust/cli/game_of_life/src/: main.rs
rust/cli/game_of_life/src/conway/: game.rs  mod.rs  pattern.rs
rust/cli/game_of_life/src/http/: handler.rs
rust/cli/game_of_life/templates/: grid.html  grid_response.html  index.html  state.html  stats.html
rust/cli/todos/: Cargo.toml  todos.json
rust/cli/todos/src/: main.rs
rust/cli/todos/src/todo/: store.rs
rust/fly.io/challenges/: Cargo.toml
rust/fly.io/challenges/src/: lib.rs
rust/fly.io/echo/: Cargo.toml
rust/fly.io/echo/src/: main.rs
rust/fly.io/echo/src/event/: mod.rs
rust/http/counter/: Cargo.toml  package-lock.json  package.json
rust/http/counter/assets/: main.css
rust/http/counter/src/: main.rs
rust/http/counter/src/counter/: app.rs
rust/http/counter/src/handlers/: html_render.rs  index.rs  mod.rs
rust/http/counter/templates/: base.html  counter.html  error.html
rust/sse/chat/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
rust/sse/chat/src/: main.rs
rust/sse/chat/src/chat/: mod.rs
rust/sse/chat/src/handler/: mod.rs
rust/sse/chat/src/handler/rendering/: mod.rs
rust/sse/chat/src/handler/template/: mod.rs
rust/sse/chat/templates/: chat.html  hangout_list.html  index.html  online_user_list.html  user_handle.html
rust/tic_tac_toe/src/: main.rs
zig/binary_search/: build.zig
zig/hello-world/src/: main.zig
