[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
term_size = "0.3.2"
anyhow = "1.0.81"
askama = "0.12.1"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
futures-util = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
lazy_static = "1.4.0"
